--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,71 +6,149 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇫🇷_FR_法国_1
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
     type: ss
-    server: 54.36.174.181
-    port: 8118
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
+    server: gzdx.jcnode.top
+    port: 21781
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
   - &id002
-    name: 🇫🇷_FR_法国_2
-    type: ss
-    server: 54.36.174.181
-    port: 8009
-    password: XKFKl2rULjIp74
-    cipher: aes-256-gcm
+    name: 🇮🇪_IE_爱尔兰_1
+    type: trojan
+    server: 54.247.136.66
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
   - &id003
-    name: 🇫🇷_FR_法国_3
-    type: ss
-    server: 54.36.174.181
-    port: 2376
-    password: faBAoD54k87UJG7
-    cipher: aes-256-gcm
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 172.67.187.109
+    port: 80
+    cipher: auto
+    uuid: 2e87cebc-977b-4fec-b079-b1ddc55b19c8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: ee1.xv2ray.net
   - &id004
-    name: 🇫🇷_FR_法国_4
-    type: ss
-    server: 54.36.174.181
-    port: 9102
-    password: e4FCWrgpkji3QY
-    cipher: aes-256-gcm
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 3.120.242.243
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
   - &id005
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: ss
+    server: 46.29.238.88
+    port: 4437
+    password: s6JDiq37UPy3eAgbaxaFEm0WySnyJn4ndYBbQ/J4PqM=
+    cipher: chacha20-ietf-poly1305
+  - &id006
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: 104.21.40.162
+    port: 443
+    cipher: auto
+    uuid: d196ccc9-db42-475d-a7e4-7c27a6a326d1
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: be1.xv2ray.net
+    network: ws
+    ws-opts:
+      path: /vmess
+      headers:
+        host: be1.xv2ray.net
+  - &id007
+    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
+    type: ss
+    server: gzyd.jcnode.top
+    port: 27048
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
+  - &id008
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: ss
+    server: gzyd.jcnode.top
+    port: 41868
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
+  - &id009
     name: 🇬🇧_GB_英国_1
     type: ss
     server: 198.244.231.25
     port: 443
     password: asdKkaskJKfnsa
     cipher: aes-256-cfb
-  - &id006
-    name: 🇺🇸_US_美国_1
+  - &id010
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 3.10.157.89
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: ss
-    server: 89.187.179.192
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id007
-    name: 🇺🇸_US_美国_2
+    server: gzdx.jcnode.top
+    port: 20887
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
+  - &id012
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_1
     type: ss
-    server: 89.187.181.179
-    port: 443
-    password: asdKkaskJKfnsa
+    server: gzyd.jcnode.top
+    port: 62506
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
+  - &id013
+    name: 🇫🇷_FR_法国_1
+    type: trojan
+    server: 35.181.201.98
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇦🇫_AF_阿富汗
+    type: ss
+    server: 121.127.46.147
+    port: 989
+    password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id008
-    name: 🇺🇸_US_美国_3
+  - &id015
+    name: 🇺🇸_US_美国->🇬🇧_GB_英国
     type: vmess
-    server: singapore.com
-    port: 8080
+    server: ld2.shabijichang.com
+    port: 80
     cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /api/v3/download.getFile
+      path: /
       headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id009
-    name: 🇺🇸_US_美国_4
+        host: ld2.shabijichang.com
+  - &id016
+    name: 🇺🇸_US_美国_2
     type: vmess
     server: wnd2.shabijichang.com
     port: 80
@@ -84,98 +162,110 @@ proxies:
       path: /
       headers:
         host: wnd2.shabijichang.com
-  - &id010
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
+  - &id017
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 54.170.136.218
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国_2
+    type: ss
+    server: gzdx.jcnode.top
+    port: 14562
+    password: 3131fb42-5c82-4624-ae2b-a01a9d05327d
+    cipher: chacha20-ietf-poly1305
+  - &id019
+    name: 🇫🇷_FR_法国_2
+    type: trojan
+    server: 35.181.165.132
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇫🇷_FR_法国_3
+    type: trojan
+    server: 13.37.210.5
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id021
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 162.159.137.86
-    port: 2052
+    server: 45.199.138.186
+    port: 30000
     cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
+    uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf
+    alterId: 64
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /path/1697376782879
       headers:
-        host: us.wx.alue.link
-  - &id011
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 8080
-    cipher: auto
-    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
-    alterId: 0
-    tls: false
+        host: www.19229362.xyz
+  - &id022
+    name: 🇬🇧_GB_英国_3
+    type: trojan
+    server: 18.132.185.20
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v004.ssrsub.com
-  - &id012
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: wnd3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 10ea3b2a-b615-45f1-b1b7-c62bafe8c80c
-    alterId: 0
-    tls: false
+    network: tcp
+  - &id023
+    name: 🇫🇷_FR_法国_4
+    type: trojan
+    server: 35.181.203.24
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wnd3.shabijichang.com
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: jd2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: 56278a1a-c7cc-459f-b00c-3037e4f99590
-    alterId: 0
-    tls: false
+    network: tcp
+  - &id024
+    name: 🇮🇪_IE_爱尔兰_3
+    type: trojan
+    server: 34.251.172.224
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: jd2.shabijichang.com
-  - &id014
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
-    type: vmess
-    server: 162.159.143.241
-    port: 2052
-    cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
-    alterId: 0
-    tls: false
+    network: tcp
+  - &id025
+    name: 🇬🇧_GB_英国_4
+    type: trojan
+    server: 13.43.227.116
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us.wx.alue.link
-  - &id015
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 172.67.184.13
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
+    network: tcp
+  - &id026
+    name: 🇬🇧_GB_英国_5
+    type: trojan
+    server: 52.56.67.143
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trj.rollingnext.co.uk
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id016
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
+    network: tcp
+  - &id027
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
     type: vmess
     server: yd1.992688.xyz
     port: 2052
@@ -189,135 +279,28 @@ proxies:
       path: /
       headers:
         host: vceu3.vpn66.eu.org
-  - &id017
-    name: 🇫🇮_FI_芬兰->🇩🇪_DE_德国
-    type: vmess
-    server: 65.109.191.22
-    port: 49017
-    cipher: auto
-    uuid: 11053029-cc94-46b2-bff4-8019a1efaeba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: asb2.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: asb2.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 104.21.75.246
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: sbl2.shabijichang.com
-  - &id020
-    name: 🇬🇧_GB_英国_2
-    type: ss
-    server: 51.89.206.18
-    port: 80
-    password: WGH062UnLY4e6op5LokqdB
-    cipher: chacha20-ietf-poly1305
-  - &id021
-    name: 🇬🇧_GB_英国_3
-    type: ss
-    server: 198.244.228.191
-    port: 443
-    password: asdKkaskJKfnsa
-    cipher: aes-256-cfb
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: ss
-    server: 204.216.213.62
-    port: 21102
-    password: b1cff6f1-5743-4515-b4e3-95c0bbe69c07
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: ss
-    server: 46.29.238.88
-    port: 4432
-    password: iZr/OIc+toNbTPYlBT8f8ltn/y5OGSrxNYu72JrWDKE=
-    cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 45.199.138.191
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1696251522438
-      headers:
-        host: www.42077230.xyz
-  - &id025
-    name: 🇫🇷_FR_法国_5
-    type: trojan
-    server: 15.237.104.194
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id026
-    name: 🇰🇷_KR_韩国
-    type: vmess
-    server: f03.bzshare.com
-    port: 443
-    cipher: auto
-    uuid: 3f75130e-f74a-4c97-8d52-68a81cd18387
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /D26xvdqUdCpvvPTz4R
-      headers:
-        host: h19-fr.wypay.org
-  - &id027
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 1.117.69.235
-    port: 80
-    cipher: auto
-    uuid: ee0a4b54-be8d-4f56-be4d-521bd1ae443d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
   - &id028
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_3
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
-    server: 162.159.137.9
+    server: flkf2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: flkf2.shabijichang.com
+  - &id029
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: lt1.992688.xyz
     port: 2052
     cipher: auto
-    uuid: fe5edf04-c2af-4ac5-84ee-16d43024decb
+    uuid: fa5fc74f-0f0b-4221-82ba-dc7cd24e24e5
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -325,71 +308,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: us.wx.alue.link
-  - &id029
-    name: 🇫🇷_FR_法国_6
-    type: trojan
-    server: 15.236.116.176
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
+        host: vcus2.vpn66.eu.org
   - &id030
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 104.18.202.232
-    port: 80
+    server: cf-lt.sharecentre.online
+    port: 8080
     cipher: auto
-    uuid: 6bf1b342-2bf0-4608-b288-8ee515e2d594
+    uuid: d3f830a2-205a-4bba-a7ca-5e87899ac04d
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /@hopev2ray،@hopev2ray
+      path: /api/v3/download.getFile
       headers:
-        host: de1vm.cdn-03.live
+        host: ssrsub.v001.ssrsub.com
   - &id031
-    name: 🇺🇸_US_美国->🇮🇳_IN_印度
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_1
     type: vmess
-    server: 104.17.18.26
-    port: 80
-    cipher: auto
-    uuid: 5180444a-4756-43b4-960b-49eb9052e4e8
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: a.109420.xyz
-  - &id032
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 108.129.3.227
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id033
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: trojan
-    server: 183.213.200.225
-    port: 28154
-    udp: true
-    password: Mdb811a0
-    sni: www.icloud.com
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: sbl3.shabijichang.com
+    server: mm3.shabijichang.com
     port: 80
     cipher: auto
     uuid: c458695d-6908-45c3-9512-e0c46418454c
@@ -400,15 +338,61 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: sbl3.shabijichang.com
+        host: mm3.shabijichang.com
+  - &id032
+    name: 🇺🇸_US_美国->🇮🇳_IN_印度_2
+    type: vmess
+    server: mm2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mm2.shabijichang.com
+  - &id033
+    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
+    type: vmess
+    server: yhnsb3.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: yhnsb3.shabijichang.com
+  - &id034
+    name: 🇺🇸_US_美国->🇦🇪_AE_阿联酋
+    type: vmess
+    server: db4.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: db4.shabijichang.com
   - &id035
-    name: 🇬🇧_GB_英国_4
-    type: trojan
-    server: 18.169.29.140
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
+    name: 🇳🇱_NL_荷兰
+    type: vmess
+    server: 164.92.152.63
+    port: 19101
+    cipher: auto
+    uuid: e2e6813a-695d-499b-8f69-929ac0f04b61
+    alterId: 0
+    tls: false
     skip-cert-verify: true
     network: tcp
 proxy-groups:
